--- a/css/main.css
+++ b/css/main.css
@@ -252,3 +252,93 @@
     margin: 0 0 0 600px;
     transform: translateX(-100%);
 }
+
+.main_content {
+    padding: 100px 0;
+    text-align: center;
+
+}
+
+.main_content h2 {
+    font-size: 25px;
+    font-weight: 700;
+    margin: 0 0 10px 0;
+}
+
+.main_content p {
+    font-size: 15px;
+    font-weight: 300;
+    margin: 0 0 30px 0;
+}
+
+.main_content .container {
+    display: flex;
+    width: 1200px;
+    margin: 0 auto;
+    gap: 30px;
+
+}
+
+.main_content .container figure {
+    flex: 1;
+    overflow: hidden;
+}
+
+.main_content .container figure .box {
+    margin: 0 0 20px 0;
+    border-radius: 64% 36% 72% 28% / 39% 47% 53% 61%;
+    overflow: hidden;
+
+}
+
+.main_content .container figure img {
+    transition: 0.5s;
+}
+
+.main_content .container figure:hover img {
+    transform: scale(1.5);
+}
+
+
+
+.main_content .container strong {
+    display: block;
+    margin: 0 0 20px 0;
+}
+
+.main_content .container a {
+    display: inline-block;
+    padding: 6px 30px;
+    background: #333;
+    color: #fff;
+    border: #f00 solid 1px;
+}
+
+.fixed_bg {
+    padding: 150px 0;
+    background: url(../img/mainvisual01.jpg) no-repeat fixed center center/cover;
+    filter: grayscale(1);
+    color: #fff;
+    text-align: center;
+}
+
+.fixed_bg h2 {
+    font-size: 25px;
+    font-weight: 700;
+    margin: 0 0 10px 0;
+}
+
+.fixed_bg p {
+    font-size: 15px;
+    font-weight: 300;
+    margin: 0 0 30px 0;
+}
+
+.fixed_bg i {
+    font-size: 20px;
+    padding: 10px;
+    background: #333;
+    border-radius: 50%;
+    margin: 0 0 0 10px;
+    vertical-align: middle;
+}
