--- a/css/main.css
+++ b/css/main.css
@@ -342,3 +342,167 @@
     margin: 0 0 0 10px;
     vertical-align: middle;
 }
+
+.utb_movie {
+    padding: 150px 0;
+    filter: grayscale(1);
+    color: #fff;
+    text-align: center;
+}
+
+.utb_movie h2 {
+    font-size: 25px;
+    font-weight: 700;
+    margin: 0 0 10px 0;
+}
+
+.utb_movie p {
+    font-size: 15px;
+    font-weight: 300;
+    margin: 0 0 30px 0;
+}
+
+.utb_movie i {
+    font-size: 20px;
+    padding: 10px;
+    background: #333;
+    border-radius: 50%;
+    margin: 0 5px;
+    vertical-align: middle;
+}
+
+.customer_tab {
+    padding: 100px 0;
+}
+
+.customer_tab .container {
+    display: flex;
+    gap: 30px;
+    width: 1200px;
+    margin: 0 auto;
+}
+
+.customer_tab .container>div {
+    flex: 1;
+}
+
+.customer_tab .tab_menu {
+    display: flex;
+    text-align: center;
+    line-height: 40px;
+    border-top: 1px solid #333;
+    margin: 0 0 10px 0;
+}
+
+.customer_tab .tab_menu>li {
+    flex: 1;
+    background: #ddd;
+    border-left: 1px solid #333;
+    cursor: pointer;
+}
+
+.customer_tab .tab_menu>li.on {
+    color: #fff;
+    background: #f00;
+}
+
+.customer_tab .tab_menu>li:last-child {
+    border-right: 1px solid #333;
+
+}
+
+.customer_tab .tab_content>div {
+    display: none;
+}
+
+.customer_tab .tab_content>div.on {
+    display: block;
+}
+
+.tab_content ul>li {
+    display: flex;
+    justify-content: space-between;
+    line-height: 40px;
+    border-bottom: 1px solid #ddd;
+}
+
+.tab_content ul>li>div {
+    width: 450px;
+    white-space: nowrap;
+    overflow: hidden;
+    text-overflow: ellipsis;
+}
+
+.footer {
+    background: #000;
+    color: #fff;
+}
+
+.footer .top {
+    border: 1px solid #333;
+}
+
+.footer .container {
+    display: flex;
+    justify-content: space-between;
+    width: 1200px;
+    margin: 0 auto;
+    line-height: 100px;
+}
+
+.footer .costomer_link {
+    display: flex;
+    gap: 40px;
+}
+
+.footer .costomer_link li {
+    position: relative;
+
+}
+
+.footer .costomer_link li~li::before {
+    content: "";
+    position: absolute;
+    width: 1px;
+    height: 13px;
+    background: #fff;
+    top: 50%;
+    left: -20px;
+    transform: translateY(-50%);
+}
+
+.footer .sns {
+    font-size: 25px;
+}
+
+.footer address {
+    font-style: normal;
+}
+
+#flink {
+    outline: none;
+    border: 1px solid #333;
+    background: #000;
+    color: #fff;
+    padding: 5px;
+    text-transform: uppercase;
+    width: 180px;
+}
+
+.popup {
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    width: 460px;
+}
+
+.popup button {
+    position: absolute;
+    bottom: 30px;
+    right: 30px;
+    width: 100px;
+    height: 30px;
+    background: #000;
+    color: #fff;
+}
